k8s/gke/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: big-data-pipeline
  labels:
    app.kubernetes.io/name: big-data-pipeline
    app.kubernetes.io/part-of: big-data-pipeline
